fix(resource-gateway): validate demo credential registry